# mner-finetuned-panx-de

./: pyproject.toml  quotes.txt  requirements.txt  train.ipynb  train.py
